# demise-ncurses

./: .dir-locals.el  .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_commands.json
src/: CMakeLists.txt  demise.cpp  editor_view.cpp  editor_view.hpp
